[package]
name = "synfx-dsp-jit"
version = "0.5.3"
edition = "2021"
authors = ["Weird Constructor <weirdconstructor@gmail.com>"]
license = "GPL-3.0-or-later"
description = "DSP JIT (Just In Time compiled) engine for real time audio synthesis and effects for Rust "
keywords = ["audio", "real-time", "synthesis", "jit", "dsp"]
categories = ["multimedia::audio", "multimedia", "algorithms", "mathematics"]
repository = "https://github.com/WeirdConstructor/synfx-dsp-jit"
readme = "README.md"

[dependencies]
cranelift = "0.86.1"
cranelift-module = "0.86.1"
cranelift-jit = "0.86.1"
cranelift-codegen = "0.86.1"
cranelift-native = "0.86.1"
ringbuf = "0.2.8"
anyhow = "1.0.58"

[dev-dependencies]
cpal = "0.13.5"
